# news

./: .env  Cargo.toml  Modelfile  README.md
aggregator/: .env  .gitignore  Cargo.toml
aggregator/migrations/2023-12-11-100421_create_news/: up.sql
aggregator/src/: error.rs  main.rs  publisher.rs  schema.rs  translator.rs
aggregator/src/collector/: mod.rs
client/: bun.lockb  index.html  package.json
client/src/: App.svelte  Player.svelte  app.css  app.scss
migrations/2023-12-11-100421_create_news/: down.sql  up.sql
server/: .env  .gitignore  Cargo.toml  diesel.toml
server/migrations/2023-12-11-100421_create_news/: down.sql  up.sql
server/src/: app.rs  error.rs  lib.rs  main.rs  news.rs  pool.rs  publisher.rs  schema.rs  security.rs  transfomer.rs  translator.rs
server/src/collector/sources/: html.rs  mod.rs  rss.rs
server/src/news/: handlers.rs  mod.rs  model.rs  repository.rs  security.rs
src/: collector.rs  lib.rs  main.rs  models.rs  news.rs  repository.rs  schema.rs  translator.rs
src/collector/: mod.rs
src/collector/sources/: html.rs  mod.rs  rss.rs
