[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
diesel = { version = "2.1.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["blocking"] }
rss = "2.0.6"
serde = "1.0.193"
serde_json = "1.0.108"
