[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.5.0", features = ["sqlite"] }
diesel = { version = "2.1.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json"] }
dotenv-flow = "0.16.2"
dotenvy = "0.15.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rss = "2.0.6"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
