[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.4"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
chrono = { version = "0.4.31", features = ["serde"] }
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.6.0", features = ["postgres"] }
diesel = { version = "2.1.4", features = ["chrono", "serde_json", "postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenv-flow = "0.16.2"
dotenvy = "0.15.7"
mime = "0.3.17"
pgvector = { version = "0.3.2", features = ["diesel"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokenizers = "0.19.1"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
mockall = "0.12.1"
tower = "0.4.13"
